tests/baselines/reference/objectLiteralMemberWithModifiers2.errors.txt
tests/cases/compiler/objectLiteralMemberWithModifiers2.ts(1,22): error TS1056: Accessors are only available when targeting ECMAScript 5 and higher.
tests/cases/compiler/objectLiteralMemberWithModifiers2.ts(1,22): error TS2378: A 'get' accessor must return a value or consist of a single 'throw' statement.


==== tests/cases/compiler/objectLiteralMemberWithModifiers2.ts (2 errors) ====
    var v = { public get foo() { } }
                         ~~~
!!! error TS1056: Accessors are only available when targeting ECMAScript 5 and higher.
                         ~~~
!!! error TS2378: A 'get' accessor must return a value or consist of a single 'throw' statement.